--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "bot.js",
   "dependencies": {
     "discord.js": "^11.4.2",
+    "erlpack": "github:hammerandchisel/erlpack",
     "lowdb": "^1.0.0",
-    "qrcode": "^1.3.3",
     "speakeasy": "^2.0.0",
-    "ytdl-core": "^0.29.1"
+    "uws": "^100.0.1"
   },
   "devDependencies": {},
   "scripts": {
