--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "dependencies": {
     "discord.js": "^11.5.1",
     "erlpack": "github:hammerandchisel/erlpack",
+    "ffmpeg": "0.0.4",
     "lowdb": "^1.0.0",
+    "node-opus": "^0.3.3",
     "speakeasy": "^2.0.0",
-    "uws": "^100.0.1"
+    "uws": "^100.0.1",
+    "youtube-search": "^1.1.4",
+    "ytdl-core": "^1.0.0",
+    "ytdl-core-discord": "^1.0.3"
   },
   "devDependencies": {},
   "scripts": {
