--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ffmpeg": "0.0.4",
     "lowdb": "^1.0.0",
     "node-opus": "^0.3.3",
+    "node-schedule": "^1.3.2",
     "speakeasy": "^2.0.0",
     "uws": "^100.0.1",
     "youtube-search": "^1.1.4",
