--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-opus": "^0.3.3",
     "node-schedule": "^1.3.2",
     "speakeasy": "^2.0.0",
+    "text2png": "^2.3.0",
     "uws": "^100.0.1",
     "youtube-search": "^1.1.4",
     "ytdl": "^0.13.1",
