--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "bot.js",
   "dependencies": {
+    "buffer-image-size": "^0.6.4",
     "discord.js": "^11.5.1",
     "erlpack": "github:hammerandchisel/erlpack",
     "ffmpeg": "0.0.4",
+    "image-to-slices": "^0.1.3",
     "lowdb": "^1.0.0",
     "node-opus": "^0.3.3",
     "node-schedule": "^1.3.2",
